--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <h2 class="title-sp">Nombre:</h2>
                     <input type="text" name="name" class="input" placeholder="Nombre...">
                     <h2 class="title-sp">Correo electrónico o teléfono:</h2>
-                    <input type="email" name="email" class="input" placeholder="Correo electrónico..." required>
+                    <input type="email" name="email" class="input" placeholder="Correo electrónico o teléfono..." required>
                     <div class="flex space-between">
                         <div>
                             <h2 class="title-sp">Mensaje:</h2>
