--- a/slider.html
+++ b/slider.html
@@ -304,7 +304,7 @@ Se debe ir cambiando los números y id a medida en que se creen proyectos
                 <div class="content-title">
                     <h2 class="flex space-between center">
                         <div>Sim. pruebas Icfes</div>
-                        <div class="time">⌚2021-05</div>
+                        <div class="time">2021/05</div>
                     </h2>
                 </div>
                 <p>El sim. de pruebas Icfes. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
@@ -355,7 +355,7 @@ Colocar adem´s la clase term para que sea visible el elemento del slider
                 <div class="content-title">
                     <h2 class="flex space-between center">
                         <div>Dadoo</div>
-                        <div class="time">⌚2021-04</div>
+                        <div class="time">2021/04</div>
                     </h2>
                 </div>
                 <p>La virtualización de los típicos dados físicos, corresponde a la primera fase de mi aprendizaje.</p>
