--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -14,11 +14,27 @@
     <link rel="stylesheet" type="text/css" href="css/media-query.css">
     <link rel="shortcut icon" href="https://pressly.000webhostapp.com/sources/Link-icon%20(2).png">
     <title>Prueba fácil - Inglés - Bookend test</title>
-
+    <style>
+        #fs-controller{
+            width: 20px;
+            height: 20px;
+            position: fixed;
+            right: 10px;
+            top: 10px;
+            background: rgba(255, 255, 255, 0.6);
+            padding: 5px;
+        }
+        #icon-fs{
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
-
+    <button id="fs-controller">
+        <img src="resources/open_fs.png" alt="" id="icon-fs">
+    </button>
     <header id="header1">
         <div class="c-icon">
             <img src="resources/logo-bookend-test.svg" class="icon" alt="logo-bookend" focusable="false">
@@ -390,7 +406,7 @@
 
     </form>-->
     <script type="text/javascript" src="js/main(test11-in-fa).js"></script>
-
+    <script src="js/fs-contr.js"></script>
 </body>
 
 </html>
