--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -23,10 +23,11 @@
             top: 10px;
             background: rgba(255, 255, 255, 0.6);
             padding: 5px;
+            border-radius: 2px;
         }
         #icon-fs{
-            width: 100%;
-            height: 100%;
+            width: 150%;
+            height: 150%;
         }
     </style>
 </head>
