--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -16,14 +16,16 @@
     <title>Prueba fácil - Inglés - Bookend test</title>
     <style>
         #fs-controller{
-            width: 20px;
-            height: 20px;
+            width: 40px;
+            height: 40px;
             position: fixed;
             right: 10px;
             top: 10px;
-            background: rgba(255, 255, 255, 0.6);
+            background: rgb(221, 221, 221);
             padding: 5px;
-            border-radius: 2px;
+            border-radius: 3px;
+            border: none;
+            z-index: 1500;
         }
         #icon-fs{
             width: 150%;
