--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -30,6 +30,9 @@
             width: 100%;
             height: 100%;
         }
+        :not(:root):fullscreen::backdrop{
+            background: rgb(255, 255, 255);
+        }
     </style>
 </head>
 
