--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -20,8 +20,8 @@
             height: 40px;
             position: fixed;
             right: 10px;
-            top: 10px;
-            background: rgb(221, 221, 221);
+            bottom: 10px;
+            background: rgba(255, 255, 255, 0.623);
             border-radius: 3px;
             border: none;
             z-index: 1500;
