--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -25,6 +25,7 @@
             border-radius: 3px;
             border: none;
             z-index: 1500;
+            padding: 0;
         }
         #icon-fs{
             width: 100%;
