--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -21,11 +21,12 @@
             position: fixed;
             right: 10px;
             bottom: 10px;
-            background: rgba(136, 136, 136, 0.623);
+            background: rgba(255, 255, 255, 0.60);
             border-radius: 3px;
             border: none;
             z-index: 1500;
             padding: 0;
+            box-shadow: 0px 0px 20px 0px grey
         }
         #icon-fs{
             width: 100%;
