--- a/assets/muestra_bookendtest/index.html
+++ b/assets/muestra_bookendtest/index.html
@@ -26,7 +26,8 @@
             border: none;
             z-index: 1500;
             padding: 0;
-            box-shadow: 0px 0px 20px 0px grey
+            box-shadow: 0px 0px 20px 0px grey;
+            cursor: pointer;
         }
         #icon-fs{
             width: 100%;
@@ -39,7 +40,7 @@
 </head>
 
 <body>
-    <button id="fs-controller">
+    <button id="fs-controller" title="Pantalla completa">
         <img src="resources/open_fs.png" alt="" id="icon-fs">
     </button>
     <header id="header1">
