--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="tt">
                     <p class="dcr">
-                        <H1 class="titlesub">Creo en el internet y en las computadoras.</H1>
+                        <H1 class="titlesub">La creatividad inicia con un clic.</H1>
                         <h2 style="font-weight: 200;">- Acompáñame...</h2>
                     </p>
                     <button class="btn-1 flex center space-between" id="btn_g">Descargar CV
