--- a/slider.html
+++ b/slider.html
@@ -376,7 +376,7 @@ Colocar adem´s la clase term para que sea visible el elemento del slider
 
 
         }
-        const links = ["", "", "", "", "assets/dadoo"]
+        const links = ["assets/dadoo", "", "", "", ""]
         for (let m = 0; m < links.length; m++) {
             insertAction("btn-1", links[m], m)
             document.getElementsByClassName("spc-a")[m].addEventListener("click", () => {
