--- a/index.html
+++ b/index.html
@@ -189,16 +189,24 @@
     </div>
     <button id="b_top" title="Scroll to top">Subir ↑</button>
     <footer>
-        copyrigths reserved © 2022
+        Todos los derechos reservados © 2022
         <div class="flex center margin-top-10px">
 
             <div>
                 <img src="assets/brand_white(2).png" alt="" width="30vw">
+                <p class="par" style="margin: 0;">La imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales y/o integrar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>
             </div>
-
+            
+            
         </div>
 
     </footer>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     </div>
     <div class="menu closed" id="menu" role="menu">
         <div class="c-menu closed" id="sub-menu">
