--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
             <div>
                 <img src="assets/brand_white(2).png" alt="" width="30vw">
-                <p class="par" style="margin: 0;">La imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales y/o integrar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>
+                <p class="par" style="margin: 0;">La imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales e/o incorporar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>
             </div>
             
             
