--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                 <iframe title="slider" src="slider.html" frameborder="0" class="slider"></iframe>
             </div>
             <div id="app_bookendtest">
+                
                 <h2 class="title-5">Una muestra interactiva</h2>
+                <div class="cam"></div>
                 <iframe src="assets/muestra_bookendtest/" id="app_b_test"></iframe><br><br>
             </div>
 
@@ -167,7 +169,7 @@
                     <h2 class="title-sp">Nombre:</h2>
                     <input type="text" name="name" class="input" placeholder="Nombre...">
                     <h2 class="title-sp">Correo electrónico o teléfono:</h2>
-                    <input type="email" name="email" class="input" placeholder="Correo electrónico o teléfono..." required>
+                    <input type="email" name="email" class="input" placeholder="Correo electrónico o teléfono...">
                     <div class="flex space-between">
                         <div>
                             <h2 class="title-sp">Mensaje:</h2>
