--- a/assets/mathApp/index.html
+++ b/assets/mathApp/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <style type="text/css" media="all">
       .box{
         display: flex;
         flex-wrap: wrap;
         width: 90%;
         margin: 10px auto;
+        max-width: 800px;
       }
       .sub-box{
         
@@ -22,7 +24,7 @@
         color: #222d6d;
         background: white;
         transition: 0.3s;
-        
+        cursor: pointer;
       }
       .sub-box:hover{
         transform: scale(1.1);
@@ -44,11 +46,13 @@
         border-bottom-right-radius: 5px;
       }
     </style>
-    <title>Título de la app</title>
+    <title>mathApp</title>
 </head>
 
 <body>
- <h1 style="color: #222d6d; text-align: center">Título de la app</h1>
+  <center><img src="logo.png" alt="" srcset="" width="70px"></center>
+ <h1 style="color: #222d6d; text-align: center">mathApp</h1>
+ 
 <div class="box">
   
   <div class="sub-box" id="t1">
@@ -81,12 +85,12 @@
       ÷
     </div>
     <div class="name">
-      Division
+      División
     </div>
   </div>
 </div>
 <div style="text-align: center ">
-  Desarrollado por Lisandro Zapata
+  Desarrollado por <a href="https://lisoprogrammer.github.io/portfolio/">Lisandro Zapata</a>
   
 </div>
 <script type="text/javascript" charset="utf-8">
