--- a/assets/mathApp/t3.html
+++ b/assets/mathApp/t3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
   <title>DIVISION</title>
   <style type="text/css" media="all">
  
@@ -17,6 +17,8 @@
     
   </div>
  <div class="titek">
+  <center><img src="logo.png" alt="" srcset="" width="70px"></center>
+
    Resuelve
  </div>
  <div class="titek">
@@ -41,11 +43,12 @@
       =
     </div>
     <div class="results" id="re">
-      <input type="number" name="on" id="on" style="min-width: 50px; max-width: 100px; margin:0; position: relative; top: -10px" placeholder="?" readonly />
+      <input type="number" name="on" id="on" placeholder="?" readonly />
     </div>
   </div>
   <div class="content-input">
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
+     <a class="btn-1" href="index.html">Regresar</a>
   </div>
  
   <script src="main(3).js"></script>
