--- a/index.html
+++ b/index.html
@@ -191,22 +191,20 @@
 
     </div>
     <button id="b_top" title="Scroll to top">Subir ↑</button>
-    <footer>
-        Todos los derechos reservados © 2022
+    <footer>                
+        <img src="assets/brand_white(2).png" alt="" width="30vw">
+
         <div class="flex center margin-top-10px">
 
-            <div>
-                <img src="assets/brand_white(2).png" alt="" width="30vw">
-                <p class="par" style="margin: 0;">La imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales e/o incorporar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>
+            <div>        
+                Todos los derechos reservados © 2023
+                <p class="par" style="margin: auto;">Las imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales e/o incorporar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>
             </div>
             
             
         </div>
 
     </footer>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
 
