--- a/slider.html
+++ b/slider.html
@@ -400,7 +400,7 @@ Colocar además la clase term para que sea visible el elemento del slider
 
 
         }
-        const links = ["assets/dadoo", "assets/mathApp"]
+        const links = ["assets/dadoo", "","assets/mathApp"]
         for (let m = 0; m < links.length; m++) {
             insertAction("btn-1", links[m], m)
             document.getElementsByClassName("spc-a")[m].addEventListener("click", () => {
