--- a/assets/mathApp/t2.html
+++ b/assets/mathApp/t2.html
@@ -50,7 +50,9 @@
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
      <a class="btn-1" href="index.html">Regresar</a>
   </div>
- 
+  <audio src="assets/aplausos.wav" id="apl-a" style="display: none;"></audio>
+  <audio src="assets/aplausos.wav" id="err-a" style="display: none;"></audio>
+  <audio src="assets/aplausos.wav" id="err-2-a" style="display: none;"></audio>
   <script src="main(2).js"></script>
 </body>
 </html>
