--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -14,6 +14,7 @@
   
 </head>
 <body>
+  <div class="box_result box_none" id="box_res">None</div>
   <div id="spi">
   </div>
 <!--  <div class="put" id="punt">
@@ -52,6 +53,9 @@
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
      <a class="btn-1" href="index.html">Regresar</a>
   </div>
+  <audio src="assets/aplausos.wav" id="apl-a" style="display: none;"></audio>
+  <audio src="assets/error.wav" id="err-a" style="display: none;"></audio>
+  <audio src="assets/error_2.wav" id="err-2-a" style="display: none;"></audio>
  <script defer="on">
    window.addEventListener("error", function(){
      alert("Hubo un error")
