--- a/assets/mathApp/index.html
+++ b/assets/mathApp/index.html
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-  <center><img src="logo.png" alt="" srcset="" width="70px"></center>
+  <center><img src="logo.png" alt="" srcset="" width="70px" style="margin-top: 20px;"></center>
  <h1 style="color: #222d6d; text-align: center">mathApp</h1>
  
 <div class="box">
