--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -21,7 +21,7 @@
     0
   </div>-->
  <div class="titek">
-  <center><img src="logo.png" alt="" srcset="" width="70px"></center>
+  <center><img src="logo.png" alt="" srcset="" width="70px" style="margin-top: 20px;"></center>
    Resuelve
  </div>
  <div class="titek">
@@ -51,7 +51,7 @@
   </div>
   <div class="content-input">
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
-     <a class="btn-1" href="index.html">Regresar</a>
+     <a class="btn-1" href="index.html">Volver a la página inicial</a>
   </div>
   <audio src="assets/aplausos.wav" id="apl-a" style="display: none;"></audio>
   <audio src="assets/error.wav" id="err-a" style="display: none;"></audio>
