--- a/assets/mathApp/t1.html
+++ b/assets/mathApp/t1.html
@@ -17,7 +17,7 @@
     
   </div>
  <div class="titek">
-  <center><img src="logo.png" alt="" srcset="" width="70px"></center>
+  <center><img src="logo.png" alt="" srcset="" width="70px" style="margin-top: 20px;"></center>
 
    Resuelve
  </div>
