--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -20,6 +20,7 @@
 <!--  <div class="put" id="punt">
     0
   </div>-->
+ <a class="btn-1" href="index.html">←</a>
  <div class="titek">
   <center><img src="logo.png" alt="" srcset="" width="70px" style="margin-top: 20px;"></center>
    Resuelve
@@ -50,8 +51,9 @@
     </div>
   </div>
   <div class="content-input">
+    <div></div>
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
-     <a class="btn-1" href="index.html">Volver a la página inicial</a>
+     
   </div>
   <audio src="assets/aplausos.wav" id="apl-a" style="display: none;"></audio>
   <audio src="assets/error.wav" id="err-a" style="display: none;"></audio>
