--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -20,7 +20,7 @@
 <!--  <div class="put" id="punt">
     0
   </div>-->
- <a class="btn-1" href="index.html">←</a>
+ <a class="btn-1" href="index.html">Atrás</a>
  <div class="titek">
   <center><img src="logo.png" alt="" srcset="" width="70px" style="margin-top: 20px;"></center>
    Resuelve
@@ -38,7 +38,7 @@
   <div class="ope">
     <div class="op1" id="n1">
     </div>
-    <div class="operando">
+    <div class="operando" id="ope">
       +
     </div>
     <div class="op2" id="n2">
