--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -7,7 +7,12 @@
   <link rel="shortcut icon" href="logo.png" type="image/x-icon">
   <title>SUMA</title>
   <style type="text/css" media="all">
-     
+     .box_p{
+      position: relative;
+      left: 10px;
+      top: 10px;
+      font-size: 25px;
+     }
   </style>
   
   <link rel="stylesheet" href="style.css">
@@ -16,6 +21,10 @@
 <body>
   <div class="box_result box_none" id="box_res">None</div>
   <div id="spi">
+  </div>
+  <div class="box_p">
+    🏆
+    <span id="p_total"></span>
   </div>
 <!--  <div class="put" id="punt">
     0
