--- a/assets/mathApp/index.html
+++ b/assets/mathApp/index.html
@@ -45,6 +45,9 @@
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
       }
+      .box_p{
+        font-size: 25px;
+      }
 
     </style>
     <title>mathApp</title>
@@ -53,7 +56,12 @@
 <body>
   <center><img src="logo.png" alt="" srcset="" width="70px" style="margin-top: 20px;"></center>
  <h1 style="color: #222d6d; text-align: center">mathApp</h1>
- 
+ <center>
+  <div class="box_p">
+    🏆
+    <span id="p_total"></span>
+  </div>
+ </center>
 <div class="box">
   
   <div class="sub-box" id="t1">
@@ -95,7 +103,12 @@
   
 </div><br><br>
 <script type="text/javascript" charset="utf-8">
-
+  if(!localStorage.getItem("puntos")){
+    localStorage.setItem("puntos",0)
+  }
+puntos = localStorage.getItem("puntos")
+caja_p = document.getElementById("p_total")
+caja_p.innerHTML = puntos
 let operaciones = ["suma","resta","mult","div"]
   for(let i = 0; i<4; i++){
     document.getElementsByClassName("sub-box")[i].addEventListener('click',function(){
