--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -24,7 +24,9 @@
   </div>
   <div class="box_p">
     🏆
-    <span id="p_total"></span>
+    <span id="p_total">0</span>
+    💥
+    <span id="racha">0</span>%
   </div>
 <!--  <div class="put" id="punt">
     0
