--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -66,9 +66,9 @@
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
      
   </div>
-  <audio src="assets/aplausos.wav" id="apl-a" style="display: none;"></audio>
-  <audio src="assets/error.wav" id="err-a" style="display: none;"></audio>
-  <audio src="assets/error_2.wav" id="err-2-a" style="display: none;"></audio>
+  <audio src="" id="apl-a" style="display: none;"></audio>
+  <audio src="" id="err-a" style="display: none;"></audio>
+  
  <script defer="on">
    window.addEventListener("error", function(){
      alert("Hubo un error")
