--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -66,8 +66,8 @@
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
      
   </div>
-  <audio src="" id="apl-a" style="display: none;"></audio>
-  <audio src="" id="err-a" style="display: none;"></audio>
+  <audio src="assets/correct/correct1.wav" id="apl-a" style="display: none;"></audio>
+  <audio src="assets/error/error1.wav" id="err-a" style="display: none;"></audio>
   
  <script defer="on">
    window.addEventListener("error", function(){
