--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -19,7 +19,10 @@
   
 </head>
 <body>
-  <div class="box_result box_none" id="box_res">None</div>
+  <div class="box_result box_none" id="box_res">
+    <!--<div id="p_result box_none"></div>-->
+    None
+  </div>
   <div id="spi">
   </div>
   <div class="box_p">
