--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     </div>
     <script src="js/typed.js" defer></script>
-    <script src="js/index.js" defer></script>
+    <script src="js/index.js" async></script>
 
 </body>
 
