--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
     <meta name="description" content="Este portafolio web contiene todo lo referente a Lisandro Zapata a nivel laboral.">
     <meta property="og:image" content="assets/Yo.jpg">
-    <link rel="shortcut icon" href="assets/favicon.svg">
+    <link rel="shortcut icon" href="assets/brand_white(2).png">
 
     <title>Lisandro Zapata | Portafolio</title>
 </head>
@@ -55,7 +55,7 @@
                         <h1 class="title">Soy</h1>
                     </div>
                     <div id="name">
-                        <h1 class="title prot" id="prot"></h1>
+                        <h1 class="title prot" id="prot">@LisoPro</h1>
                     </div>
 
                 </div>
@@ -70,7 +70,75 @@
                         <h2 style="font-weight: 200;">- Acompáñame...</h2>
                     </p>
                     <button class="btn-1 flex center space-between" id="btn_g">Descargar CV
-                        <img src="assets/download.svg" alt="" width="25vw">
+                        <svg
+                        width="7mm"
+                        height="7mm"
+                        viewBox="0 0 210 210"
+                        version="1.1"
+                        id="svg5"
+                        inkscape:version="1.1 (c68e22c387, 2021-05-23)"
+                        sodipodi:docname="download.svg"
+                        xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                        xmlns="http://www.w3.org/2000/svg"
+                        xmlns:svg="http://www.w3.org/2000/svg">
+                       <sodipodi:namedview
+                          id="namedview7"
+                          pagecolor="#505050"
+                          bordercolor="#eeeeee"
+                          borderopacity="1"
+                          inkscape:pageshadow="0"
+                          inkscape:pageopacity="0"
+                          inkscape:pagecheckerboard="0"
+                          inkscape:document-units="mm"
+                          showgrid="false"
+                          inkscape:zoom="0.73406285"
+                          inkscape:cx="428.43743"
+                          inkscape:cy="357.59881"
+                          inkscape:window-width="1920"
+                          inkscape:window-height="1009"
+                          inkscape:window-x="-8"
+                          inkscape:window-y="-8"
+                          inkscape:window-maximized="1"
+                          inkscape:current-layer="layer1" />
+                       <defs
+                          id="defs2" />
+                       <g
+                          inkscape:label="Capa 1"
+                          inkscape:groupmode="layer"
+                          id="layer1">
+                         <rect
+                            style="fill:#000000;stroke:#000000;stroke-width:0.711297;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:0;paint-order:markers fill stroke"
+                            id="rect846"
+                            width="8.0885954"
+                            height="84.080887"
+                            x="-70.84124"
+                            y="125.90786"
+                            transform="matrix(0.78263607,-0.62247955,0.75725061,0.65312442,0,0)" />
+                         <rect
+                            style="fill:#000000;stroke:#000000;stroke-width:0.716872;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:0;paint-order:markers fill stroke"
+                            id="rect928"
+                            width="8.0947971"
+                            height="85.339806"
+                            x="199.35733"
+                            y="-22.632151"
+                            transform="matrix(0.73326117,0.6799471,-0.76763674,0.64088519,0,0)" />
+                         <rect
+                            style="fill:#000000;stroke:#000000;stroke-width:0.81731;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:0;paint-order:markers fill stroke"
+                            id="rect1156"
+                            width="11.332726"
+                            height="158.33167"
+                            x="98.044289"
+                            y="17.40918" />
+                         <rect
+                            style="fill:#000000;stroke:#000000;stroke-width:1.209;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:0;paint-order:markers fill stroke"
+                            id="rect1373"
+                            width="121.46723"
+                            height="11.894418"
+                            x="43.252426"
+                            y="188.07907" />
+                       </g>
+                     </svg>
                     </button>
 
                 </div>
@@ -163,7 +231,7 @@
                 <h1>Contáctame</h1><br>
                 <form action="" method="post" class="form-1" id="contact-form">
                     <div class="code suggestion">
-                        <h2>Puedes enviar <span id="cont" class="time">3</span> mensajes hoy.</h2>
+                        <h2>Puedes enviar <span id="cont" class="sbr">3</span> mensajes hoy.</h2>
                     </div>
 
 
@@ -249,7 +317,9 @@
         </div>
 
     </div>
-    <script src="js/typed.js" defer></script>
+
+
+    <script src="js/typed.js" defer ></script>
     <script src="js/index.js" async></script>
 
 </body>
