--- a/slider.html
+++ b/slider.html
@@ -348,7 +348,7 @@ Se debe ir cambiando los números y id a medida en que se creen proyectos
                         </h2>
                     </div>
                     <p>Una aplicación web para entrenar a los niños y jóvenes estudiantes en las operaciones básicas de las matemáticas.</p>
-                    <a class="btn-1" target="_blank" href="assets/mathApp/">Ir a la página web<img src="assets/a_go.svg" alt=""></a><br>
+                    <a class="btn-1" target="_blank" href="assets/mathApp/">Ir a la app web<img src="assets/a_go.svg" alt=""></a><br>
                 </div>
             </div>
 <!--
