--- a/assets/mathApp/t0.html
+++ b/assets/mathApp/t0.html
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="content-input">
-    <div></div>
+    <label for="in" id="label_input"></label>
      <input type="number" name="in" id="in" placeholder="Escribe tu respuesta aquí..."/>
      
   </div>
