--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
             <div>        
                 Todos los derechos reservados © 2023
-                <p class="par" style="margin: auto;">Las imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales e/o incorporar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>
+                <!--<p class="par" style="margin: auto;">Las imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales e/o incorporar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>-->
             </div>
             
             
