--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <h1 class="title">Soy</h1>
                     </div>
                     <div id="name">
-                        <h1 class="title prot" id="prot">@LisoPro</h1>
+                        <h1 class="title prot" id="prot"></h1>
                     </div>
 
                 </div>
@@ -191,7 +191,7 @@
                 </div>
                 <div class="element tc flex column center" id="tc6">
                     <img src="assets/py.png" alt="Python" srcset="" width="100vw"><br>
-                    <h2>Python</h2>
+                    <h2>PYTHON</h2>
                 </div>
                 <div class="element tc flex column center" id="tc7">
                     <img src="assets/mysql.png" alt="MYSQL" srcset="" width="110vw"><br>
