--- a/slider.html
+++ b/slider.html
@@ -102,7 +102,7 @@
             border-radius: 2px;
             background: var(--color2);
             color: rgb(255, 255, 255);
-            margin: 20px auto;
+            margin: 50px auto;
             font-size: 20px;
             transition: 0.3s;
             display: flex;
@@ -262,6 +262,32 @@
         a{
             text-decoration: none;
         }
+        .info_box {
+            width: fit-content;
+            height: fit-content;
+            border-radius: 2px;
+            background: rgb(255, 255, 255);
+            margin: 16px auto !important;
+            padding: 8px;
+            display: flex;
+            align-items: flex-end;
+        }
+        .developed{
+            color: #4ab200;
+        }
+        .in_dev{
+            color: #004d6e;
+        }
+        .in_dev::before{
+            content: "";
+            width: 20px;
+            height: 20px;
+            display: block;
+            background: url("assets/code_icon.png");
+            background-position: center;
+            background-size: cover;
+            margin: 0px 2px;
+        }
     </style>
 </head>
 
@@ -316,7 +342,7 @@ Se debe ir cambiando los números y id a medida en que se creen proyectos
                     </h2>
                 </div>
                 <p>La virtualización de los típicos dados físicos, corresponde a la primera fase de mi aprendizaje.</p>
-                <a class="btn-1" target="_blank" href="assets/dadoo">Ir a la página web<img src="assets/a_go.svg" alt=""></a><br>
+                <a class="btn-1" target="_blank" href="assets/dadoo">Ir a Dadoo<img src="assets/a_go.svg" alt=""></a><br>
             </div>
 
         </div>
@@ -332,6 +358,7 @@ Se debe ir cambiando los números y id a medida en que se creen proyectos
                     </h2>
                 </div>
                 <p>El sim. de pruebas Icfes. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
+                <div class="info_box in_dev">en desarrollo</div>
                 <!--<a class="btn-1" href="index.html#app_b_test" target="_self">Ir a la página web<img src="assets/a_go.svg" alt=""></a>--><br>
             </div>
 
@@ -348,7 +375,7 @@ Se debe ir cambiando los números y id a medida en que se creen proyectos
                         </h2>
                     </div>
                     <p>Una aplicación web para entrenar a los niños y jóvenes estudiantes en las operaciones básicas de las matemáticas.</p>
-                    <a class="btn-1" target="_blank" href="assets/mathApp/">Ir a la app web<img src="assets/a_go.svg" alt=""></a><br>
+                    <a class="btn-1" target="_blank" href="assets/mathApp/">Ir a mathApp<img src="assets/a_go.svg" alt=""></a><br>
                 </div>
             </div>
 <!--
