--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="title-5">
                     <h1 class="t-i">Sobre mí</h1>
                 </div>
-                <p>Mi nombre es Lisandro Zapata. Nací el 23 de febrero de 2005, es decir, tengo <span id="ag"></span> años. Soy técnico en sistemas, desarrollador web y estudiante de Ingeniería de Sistemas de 2° semestre.<!-- becado por <a href="https://www.utb.edu.co/blog/noticias/refineria-de-cartagena-y-la-utb-entregan-becas/" class="">@BecasConCorazón</a> de la Refinería de Cartagena y la UTB.--> Me identifico como una persona autodidacta, responsable y ordenada. Cuando me inspiro, me encanta dibujar, pues la descarga de emociones es gigantezca. Me puedes llamar Liso, no por ser liso, sino por ser curioso.</p>
+                <p>Mi nombre es Lisandro Zapata. Nací el 23 de febrero de 2005, es decir, tengo <span id="ag"></span> años. Soy técnico en sistemas, desarrollador web y estudiante de Ingeniería de Sistemas de segundo semestre.<!-- becado por <a href="https://www.utb.edu.co/blog/noticias/refineria-de-cartagena-y-la-utb-entregan-becas/" class="">@BecasConCorazón</a> de la Refinería de Cartagena y la UTB.--> Me identifico como una persona autodidacta, responsable y ordenada. Cuando me inspiro, me encanta dibujar, pues la descarga de emociones es gigantezca. Me puedes llamar Liso, no por ser liso, sino por ser curioso.</p>
             </div>
 
         </div>
