--- a/index.html
+++ b/index.html
@@ -261,8 +261,20 @@
     <footer>                
         <img src="assets/brand_white(2).png" alt="" width="30vw">
 
-        <div class="flex center margin-top-10px">
-
+        <div class="flex center margin-top-10px flex-column">
+            <div class="flex center">
+                <br>
+                <div class="m">
+                    <a href="https://github.com/LisoProgrammer" class="a-normal net">
+                        <img src="assets/github_logo.png" alt="Logo de Github" width="30vw">
+                    </a>
+                </div>
+                <div class="m">
+                    <a href="https://www.facebook.com/lisandroez.paternina/" class="a-normal net">
+                        <img src="assets/f.png" alt="Logo de Facebook" width="30vw">
+                    </a>
+                </div>
+            </div>
             <div>        
                 Todos los derechos reservados © 2023
                 <!--<p class="par" style="margin: auto;">Las imágenes tomadas de otras marcas son utilizadas únicamente para indicar relación con las habilidades laborales e/o incorporar en el diseño de este sitio web, todas bajo la licencia<a href="https://creativecommons.org/licenses/?lang=es" class="a-sp" style="color: #fff">Creative Commons.</a></p>-->
