--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="title-5">
                     <h1 class="t-i">Sobre mí</h1>
                 </div>
-                <p>Mi nombre es Lisandro Zapata. Nací el 23 de febrero de 2005, es decir, tengo <span id="ag"></span> años. Soy técnico en sistemas, desarrollador web y estudiante de Ingeniería de Sistemas de segundo semestre.<!-- becado por <a href="https://www.utb.edu.co/blog/noticias/refineria-de-cartagena-y-la-utb-entregan-becas/" class="">@BecasConCorazón</a> de la Refinería de Cartagena y la UTB.--> Me identifico como una persona autodidacta, responsable y ordenada. Cuando me inspiro, me encanta dibujar, pues la descarga de emociones es gigantezca. Me puedes llamar Liso, no por ser liso, sino por ser curioso.</p>
+                <p>Mi nombre es Lisandro Zapata. Nací el 23 de febrero de 2005, es decir, tengo <span id="ag"></span> años. Soy técnico en sistemas, desarrollador web y estudiante de Ingeniería de Sistemas de <span id="s_carr_or"></span>.<!-- becado por <a href="https://www.utb.edu.co/blog/noticias/refineria-de-cartagena-y-la-utb-entregan-becas/" class="">@BecasConCorazón</a> de la Refinería de Cartagena y la UTB.--> Me identifico como una persona autodidacta, responsable y ordenada. Cuando me inspiro, me encanta dibujar, pues la descarga de emociones es gigantezca. Me puedes llamar Liso, no por ser liso, sino por ser curioso.</p>
             </div>
 
         </div>
@@ -159,7 +159,7 @@
                 <div class="title-5">
                     <h1 class="t-i">Mis habilidades Pro</h1>
                 </div>
-                <p>Como técnico en sistemas, manejo herramientas ofimáticas y soy capaz de participar en el montaje de redes informáticas y de realizar mantenimiento preventivo en equipos de cómputo. Además, como desarrollador web, manejo las tecnologías que se presentan a continuación. </p>
+                <p>Como técnico en sistemas, puedo administrar equipos de oficina, participar en el montaje de redes informáticas y realizar mantenimiento preventivo a computadoras. Como desarrollador web, también trabajo con las tecnologías que se presentan a continuación. </p>
             </div>
 
         </div>
@@ -332,6 +332,7 @@
 
     <script src="js/typed.js" defer ></script>
     <script src="js/index.js"></script>
+    <script src="js/date.js"></script>
 
 </body>
 
