--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <div class="title-5">
                     <h1 class="t-i">Mis habilidades Pro</h1>
                 </div>
-                <p>Como técnico en sistemas, puedo administrar equipos de oficina, participar en el montaje de redes informáticas y realizar mantenimiento preventivo a computadoras. Como desarrollador web, también trabajo con las tecnologías que se presentan a continuación. </p>
+                <p>Como técnico en sistemas, puedo administrar y configurar herramientas y equipos de oficina, participar en el montaje de redes informáticas y realizar mantenimiento preventivo a computadoras. Como desarrollador web, también trabajo con las tecnologías que se presentan a continuación. </p>
             </div>
 
         </div>
@@ -244,7 +244,7 @@
                         </div>
 
                         <div>
-                            <span><div class="time"><span  id="le">0</span>/200</div>
+                            <span><div class="time"><span  id="le">0</span>/400</div>
                         </span>
                     </div>
 
