Parámetros de dad corregidos y codigo optimizado

--- a/date.index.html
+++ b/date.index.html
@@ -7,6 +7,13 @@
     <title>Date</title>
 </head>
 <body>
+    <span>Fecha de nacimiento: 23 de febrero(2) de 2005</span>
+    <br>
+    <span>
+        Años cumplidos: <span id="ag"></span>
+        <br>
+        (anio_actual - anio_nacimiento) + (30 * (n_mes_nac - 1) + dia_nac)
+    </span>
     <span>Año inicial: 2022</span>
     <br>
     <span>Semestres transcurridos este año: <span id="s_tr"></span></span>
