Corrección de errores de interfaz

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
 
         </header>
-        <div class="ban flex">
+        <div class="ban flex" id="ban">
             <div class="flex t">
                 <div class="flex pro">
                     <div>
